# medbis-price-intelligence

./: KNOWN_LIMITATIONS.md  README.md  pyproject.toml  requirements.txt
docs/: BUILD_WINDOWS_EXE.md  FIRST_RUN.md  RELEASE_CHECKLIST.md
installer/: MedBISPriceIntelligence.iss
packaging/: medbis_price_intelligence.spec  version_info.txt
scripts/: build_exe.ps1  release_zip.ps1  run_app.ps1
src/medbis_price_intelligence/: __init__.py  __main__.py  app.py  config.py  launcher.py  settings.py
src/medbis_price_intelligence/database/: models.py  repositories.py  session.py
src/medbis_price_intelligence/importer/: __init__.py  detector.py  importer.py
src/medbis_price_intelligence/matching/: __init__.py  engine.py  models.py
src/medbis_price_intelligence/reports/: __init__.py  excel.py  intelligence.py
src/medbis_price_intelligence/scrapers/: __init__.py  algeos.py  amazon_uk.py  base.py  cache.py  care_supply_store.py  chemist_net.py  daylong.py  easy_meds_health.py  ecommerce.py  esupplies_medical.py  medical_dressings.py  medical_world.py  medisave.py  medisupplies.py  models.py  registry.py  runner.py  wms.py
src/medbis_price_intelligence/services/: __init__.py  price_search.py
src/medbis_price_intelligence/ui/: __init__.py  chart.py  main_window.py  theme.py
src/medbis_price_intelligence/utils/: logging.py
tests/: test_browser_launch_policy.py  test_column_detector.py  test_dashboard_chart.py  test_excel_report.py  test_matching_engine.py  test_price_intelligence.py  test_release_docs.py  test_scraper_base.py  test_scraper_registry.py  test_scraper_urls.py  test_settings.py
